<resources>
    <string name="app_name">Simple Tip</string>
    <string name="action_settings">Settings</string>
    <string name="button_suggest">Suggest Tip</string>
    <string name="label_bill_amount_main">Bill Total:</string>
    <string name="label_bill_amount_Sum">Bill Total: $ 0.00</string>
    <string name="label_tip_percent">Tip percent:</string>
    <string name="label_number_of_people">Number of People:</string>
    <string name="label_experience">How was your experience?</string>
    <string name="title_activity_summary">Summary</string>
    <string name="label_tip_per_person">Tip per person: $ 0.00</string>
    <string name="label_total_amount">Total Amount: $ 0.00</string>
    <string name="label_tip_total">Tip total: $ 0.00</string>
    <string name="label_each_person_pays">Each person pays: $ 0.00</string>
    <string name="label_bye">Have a nice day!</string>
    <string name="label_plus_one_dollar">+1.00</string>
    <string name="label_minus_one_dollar">-1.00</string>
    <string name="label_plus_ten_cents">+0.10</string>
    <string name="label_minus_ten_cents">-0.10</string>
    <string name="label_plus_one_cents">+0.01</string>
    <string name="label_minus_one_cents">-0.01</string>

</resources>
