<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.uottawa.greene.simpletip.MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:id="@+id/btncalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="calculate"
        android:text="Calculate"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnSuggestTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_suggest"
        android:textColor="@color/icons"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTipPercentage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTipPercentage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblNumOfPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_number_of_people"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imgPeople"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.173"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPercentage"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/txtNumOfPeople"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblNumOfPeople"
        app:layout_constraintLeft_toRightOf="@+id/lblNumOfPeople"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/txtBillAmount"
        android:layout_width="69dp"
        android:layout_height="41dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblBillTotal"
        app:layout_constraintLeft_toRightOf="@+id/lblBillTotal" />

    <EditText
        android:id="@+id/txtTipPercentage"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTipPercentage"
        app:layout_constraintLeft_toRightOf="@+id/lblTipPercentage"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="plus"
        android:text="+"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="@+id/btnMinus"
        app:layout_constraintLeft_toRightOf="@+id/btnMinus"
        app:layout_constraintTop_toTopOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="minus"
        android:text="-"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumOfPeople"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txtNumOfPeople"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNumOfPeople" />

    <ImageView
        android:id="@+id/imgTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cash"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTipPercentage"
        app:layout_constraintBottom_toBottomOf="@+id/lblTipPercentage"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/imgBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/receipt"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblBillTotal"
        app:layout_constraintBottom_toBottomOf="@+id/lblBillTotal"
        android:layout_marginStart="10dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgPeople"
        app:srcCompat="@drawable/account_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/lblNumOfPeople"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblNumOfPeople" />

    <ImageView
        android:id="@+id/imgMain"
        app:srcCompat="@drawable/silverware"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/lblBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:text="@string/label_bill_amount_main"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imgBill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/lblTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:text="@string/label_tip_percent"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imgTip"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblBillTotal"
        app:layout_constraintVertical_bias="0.125"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btnPlusOne"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="plusOne"
        android:text="@string/label_plus_one_dollar"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/btnMinusOne"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-14dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="minusOne"
        android:text="@string/label_minus_one_dollar"
        android:textColor="@color/icons"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusOne" />

    <Button
        android:id="@+id/btnPlusTen"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="plusTen"
        android:text="@string/label_plus_ten_cents"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/btnPlusOne"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/btnMinusTen"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="minusTen"
        android:text="@string/label_minus_ten_cents"
        android:textColor="@color/icons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/btnMinusOne"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusTen" />


</android.support.constraint.ConstraintLayout>
